# amplifier-module-auto-title

./: README.md  bundle.md
.amplifier/: bundle.md
behaviors/: terminal-title.yaml
context/: terminal-title-awareness.md
modules/hooks-auto-title/: pyproject.toml
modules/hooks-auto-title/amplifier_module_hooks_auto_title/: __init__.py
modules/hooks-auto-title/tests/: test_hook.py
skills/terminal-title/: SKILL.md
